# django-photo-gallery

./: project.md  pyproject.toml  requirements.txt
api/: serializers.py  urls.py  views.py
core/: admin.py  forms.py  models.py  views.py
core/migrations/: 0001_initial.py  0002_auto_20200729_1509.py  0003_auto_20200729_1546.py  0004_auto_20200730_1501.py  0005_auto_20200730_1724.py  0006_auto_20200730_2001.py  0007_album_favorited_by.py
project/: settings.py  urls.py
static/css/: style.css
static/js/: photo.js
templates/: base.html
templates/core/: add_album.html  add_photo.html  add_photo_to_album.html  delete_album.html  delete_photo.html  edit_album.html  home.html  list_albums.html  list_photos.html  show_album.html  show_photo.html
users/: models.py
